--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/chalk": "^2.2.0",
     "@types/cross-spawn": "^6.0.0",
     "@types/es6-promise": "^3.3.0",
+    "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.5.1",
     "chai": "^4.1.2",
