--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -18,9 +18,10 @@
             "dependencies": {
                 "config": "^1.30.0",
                 "dotenv": "^5.0.1",
+                "fs-extra": "^6.0.1",
                 "lodash": "^4.17.10",
                 "nodemon": "^1.17.3",
-                "request": "^2.85.0",
+                "request": "^2.87.0",
                 "request-promise": "^4.2.2",
                 "restify": "^7.1.1"            
             },
@@ -53,8 +54,8 @@
             "dependencies": {
                 "config": "^1.30.0",
                 "dotenv": "^5.0.1",
-                "nodemon": "^1.17.3",
-                "request": "^2.85.0",
+                "fs-extra": "^6.0.1",
+                "request": "^2.87.0",
                 "request-promise": "^4.2.2",
                 "restify": "^7.1.1"            
             }
@@ -83,8 +84,9 @@
             "dependencies": {
                 "config": "^1.30.0",
                 "dotenv": "^5.0.1",
+                "fs-extra": "^6.0.1",
                 "nodemon": "^1.17.3",
-                "request": "^2.85.0",
+                "request": "^2.87.0",
                 "request-promise": "^4.2.2",
                 "restify": "^7.1.1"            
             },
