bugfix: copy definitions to _build

--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -34,7 +34,8 @@
         "override-settings": "",
         "override-config": "",
         "assets": [
-            "/public/**"
+            "/public/**",
+            "/app/definitions/**"
         ],
         "exclude": [    
         ]
