--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -65,7 +65,8 @@
         "exclude": [
             "/.gitignore",
             "/swagger.json",
-            "/test"
+            "/test",
+            "/sample-test.ts"
         ]
     },
     "dev": {
@@ -94,7 +95,8 @@
             "devDependencies": {
                 "chai": "^4.1.2",
                 "chai-as-promised": "^7.1.1",
-                "mocha": "^5.2.0"           
+                "mocha": "^5.2.0",
+                "restify-clients": "^2.3.0"      
             }
         }
     }
