--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-spawn": "^6.0.5",
     "glob": "^7.1.2",
     "mocha": "^5.2.0",
+    "restify-clients": "^2.3.0",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
   }
