bugfix: bulk conditioners repeating values

--- a/cfg.env
+++ b/cfg.env
@@ -2,6 +2,6 @@ ELASTICUID=
 ELASTICPWD=
 COUNTRYCODESERVICEURL=http://34.235.192.106/api/countries
 COORDINATECONVERSIONSERVICEURL=http://34.235.192.106:8080/api/doConversion
-EMCCATALOGSERVICEURLGET=http://localhost:8081/emc/_search
-EMCCATALOGSERVICEURLPOST=http://localhost:8081/emc/logs/${fingerprint}/_update
+EMCCATALOGSERVICEURLGET=http://34.235.192.106:8081/emc/_search
+EMCCATALOGSERVICEURLPOST=http://34.235.192.106:8081/emc/logs/${fingerprint}/_update
 INCLUDEFILEURIINGET=true
