--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -20,6 +20,7 @@
                 "dotenv": "^5.0.1",
                 "fs-extra": "^6.0.1",
                 "lodash": "^4.17.10",
+                "node-gyp": "^3.7.0",
                 "nodemon": "^1.17.3",
                 "request": "^2.87.0",
                 "request-promise": "^4.2.2",
@@ -58,6 +59,7 @@
                 "fs-extra": "^6.0.1",
                 "request": "^2.87.0",
                 "request-promise": "^4.2.2",
+                "node-gyp": "^3.7.0",
                 "restify": "^7.1.1"            
             }
         },
@@ -88,6 +90,7 @@
                 "dotenv": "^5.0.1",
                 "fs-extra": "^6.0.1",
                 "nodemon": "^1.17.3",
+                "node-gyp": "^3.7.0",
                 "request": "^2.87.0",
                 "request-promise": "^4.2.2",
                 "restify": "^7.1.1"            
