--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.0.0",
     "fs-extra": "^6.0.1",
     "lodash": "^4.17.10",
+    "node-gyp": "^3.7.0",
     "nodemon": "^1.17.5",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
