rename app directory to reduce confusion for docker builds

--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -36,7 +36,7 @@
         "override-config": "",
         "assets": [
             "/public/**",
-            "/app/definitions/**"
+            "/src/definitions/**"
         ],
         "exclude": [    
         ]
