new local build process to use ./app endpoint

--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -68,7 +68,7 @@
             "/.gitignore",
             "/swagger.json",
             "/test",
-            "/sample-test.ts"
+            "/sample-test.js"
         ]
     },
     "dev": {
