process: create /app directory for auto deployment process in .mil

--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -68,7 +68,8 @@
             "/.gitignore",
             "/swagger.json",
             "/test",
-            "/sample-test.js"
+            "/sample-test.js",
+            "/.env"
         ]
     },
     "dev": {
