--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "restify-server-prod",
+  "name": "ods-conditioner",
   "version": "1.0.0",
-  "description": "Basic Restify Node Server scaffold",
+  "description": "Condition Metadata from image headers and update elastic catalog",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node index.js"
@@ -13,8 +13,6 @@
     "dotenv": "^5.0.1",
     "fs-extra": "^6.0.1",
     "lodash": "^4.17.10",
-    "node-gyp": "^3.7.0",
-    "nodemon": "^1.17.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "restify": "^7.1.1"
