--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -2,9 +2,9 @@
     "any": {
         "comments": "these settings apply for any build UNLESS there is a prod or dev field.",
         "package": {
-            "name": "restify-server",
+            "name": "ods-conditioner",
             "version": "1.0.0",
-            "description": "Basic Restify Node Server scaffold",
+            "description": "Condition Metadata from image headers and update elastic catalog",
             "main": "index.js",
             "scripts": {
                 "start": "nodemon index.js",
@@ -20,8 +20,6 @@
                 "dotenv": "^5.0.1",
                 "fs-extra": "^6.0.1",
                 "lodash": "^4.17.10",
-                "node-gyp": "^3.7.0",
-                "nodemon": "^1.17.3",
                 "request": "^2.87.0",
                 "request-promise": "^4.2.2",
                 "restify": "^7.1.1"            
@@ -44,9 +42,6 @@
     "prod": {
         "comments": "renaming this to 'prod' results in these settings being applied to the build with -prod flag",
         "package": {
-            "name": "restify-server-prod",
-            "version": "1.0.0",
-            "description": "Basic Restify Node Server scaffold",
             "main": "index.js",
             "scripts": {
                 "start": "NODE_ENV=production node index.js"
@@ -59,7 +54,6 @@
                 "fs-extra": "^6.0.1",
                 "request": "^2.87.0",
                 "request-promise": "^4.2.2",
-                "node-gyp": "^3.7.0",
                 "restify": "^7.1.1"            
             }
         },
