--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "npm": "^6.2.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
-    "restify": "^7.2.1"
+    "restify": "^7.2.1",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
