--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.17.5",
     "npm": "^6.2.0",
     "request": "^2.87.0",
+    "request-ip": "^2.1.1",
     "request-promise": "^4.2.2",
     "restify": "^7.2.1",
     "winston": "^3.0.0"
@@ -32,6 +33,7 @@
     "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.5.1",
+    "@types/restify": "^7.2.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chalk": "^2.4.1",
