--- a/localbuilder.config.json
+++ b/localbuilder.config.json
@@ -22,7 +22,9 @@
                 "lodash": "^4.17.10",
                 "request": "^2.87.0",
                 "request-promise": "^4.2.2",
-                "restify": "^7.1.1"            
+                "restify": "^7.1.1",
+                "winston": "^3.0.0",
+                "request-ip": "^2.1.1"    
             },
             "devDependencies": {
                 "chai": "^4.1.2",
